@@ -1,5 +1,3 @@
-; @(#)$Ident: dist.ini 2014-01-24 20:52 pjf ;
-
 name = File-DataClass
 
 [Prereqs]
