@@ -1,10 +1,8 @@
-# @(#)$Ident: DataClass.pm 2013-12-22 16:46 pjf ;
-
 package File::DataClass;
 
 use 5.010001;
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.33.%d', q$Rev: 1 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.33.%d', q$Rev: 2 $ =~ /\d+/gmx );
 
 use Moo;
 
@@ -26,7 +24,7 @@ File::DataClass - Structured data file IO with OO paradigm
 
 =head1 Version
 
-This document describes version v0.33.$Rev: 1 $ of L<File::DataClass>
+This document describes version v0.33.$Rev: 2 $ of L<File::DataClass>
 
 =head1 Synopsis
 
