@@ -1,10 +1,7 @@
-# @(#)$Ident: HashMerge.pm 2013-12-29 03:32 pjf ;
-
 package File::DataClass::HashMerge;
 
 use strict;
 use warnings;
-use version; our $VERSION = qv( sprintf '0.33.%d', q$Rev: 1 $ =~ /\d+/gmx );
 
 sub merge {
    my ($self, $dest_ref, $src, $filter) = @_; my $updated = 0;
@@ -104,10 +101,6 @@ __END__
 =head1 Name
 
 File::DataClass::HashMerge - Merge hashes with update flag
-
-=head1 Version
-
-This document describes version v0.33.$Rev: 1 $
 
 =head1 Synopsis
 
