@@ -1,11 +1,8 @@
-# @(#)$Ident: IO.pm 2014-01-15 16:26 pjf ;
-
 package File::DataClass::IO;
 
 use 5.010001;
 use namespace::clean -except => 'meta';
 use overload '""' => sub { shift->pathname }, fallback => 1;
-use version; our $VERSION = qv( sprintf '0.33.%d', q$Rev: 1 $ =~ /\d+/gmx );
 
 use Moo;
 use Cwd                        qw( );
@@ -1066,10 +1063,6 @@ __END__
 =head1 Name
 
 File::DataClass::IO - Better IO syntax
-
-=head1 Version
-
-This document describes version v0.33.$Rev: 1 $ of L<File::DataClass::IO>
 
 =head1 Synopsis
 
