@@ -1,9 +1,6 @@
-# @(#)$Ident: ResultSet.pm 2014-01-23 00:43 pjf ;
-
 package File::DataClass::ResultSet;
 
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.33.%d', q$Rev: 1 $ =~ /\d+/gmx );
 
 use Moo;
 use File::DataClass::Constants;
@@ -364,10 +361,6 @@ __END__
 =head1 Name
 
 File::DataClass::ResultSet - Core element methods
-
-=head1 Version
-
-This document describes version v0.33.$Rev: 1 $
 
 =head1 Synopsis
 
