@@ -1,20 +1,17 @@
-# @(#)$Ident: Types.pm 2013-09-13 17:49 pjf ;
-
 package File::DataClass::Types;
 
 use strict;
 use warnings;
 use namespace::clean -except => 'meta';
-use version; our $VERSION = qv( sprintf '0.33.%d', q$Rev: 1 $ =~ /\d+/gmx );
 
 use File::DataClass::IO;
-use Scalar::Util            qw( blessed dualvar );
-use Type::Library               -base, -declare =>
-                            qw( Cache DummyClass HashRefOfBools Lock
-                                OctalNum Result Path Directory File );
-use Type::Utils             qw( as coerce extends from
-                                message subtype via where );
-use Unexpected::Functions   qw( inflate_message );
+use Scalar::Util          qw( blessed dualvar );
+use Type::Library             -base, -declare =>
+                          qw( Cache DummyClass HashRefOfBools Lock
+                              OctalNum Result Path Directory File );
+use Type::Utils           qw( as coerce extends from
+                              message subtype via where );
+use Unexpected::Functions qw( inflate_message );
 
 BEGIN { extends q(Unexpected::Types) };
 
@@ -140,10 +137,6 @@ __END__
 =head1 Name
 
 File::DataClass::Types - Role defining package constraints
-
-=head1 Version
-
-This document describes version v0.33.$Rev: 1 $
 
 =head1 Synopsis
 
