@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+          - Removed Ident: labels and VERSION
+
 0.33.1    2014-01-24 20:54:00
           - Updated gitpre commit hook
           - Updated Unexpected dependency
